2013-08-06 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFString/hash.m,
	* Source/CFString.c: Always use UTF-16 in CFStringHash()

2013-07-25 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFPropertyList.c: Add some property list writing code.
	* Source/CFRuntime.c,
	* Source/GSPrivate.h: Remove unneeded GSTypeCreateCopy() function.

2013-07-25 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c,
	* Source/CFAttributedString.c,
	* Source/CFBag.c,
	* Source/CFData.c,
	* Source/CFDate.c,
	* Source/CFDictionary.c,
	* Source/CFError.c,
	* Source/CFRuntime.c,
	* Source/CFNumber.c,
	* Source/CFLocale.c,
	* Source/CFTimeZone.c,
	* Source/CFSet.c,
	* Source/CFString.c,
	* Source/CFRunLoop.c,
	* Source/CFURL.c: Include new headers.
	* Source/GSPrivate.h: Move functionality.
	* Source/GSObjCRuntime.h: Move ObjC runtime functionality to separate
	header.
	* Source/GSUnicode.c,
	* Source/GSUnicode.h: Move Unicode conversion functions to separate
	header.
	* Source/CFStringEncoding.c: Use GSUnicode.h.

2013-07-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Use new sort function.

2013-07-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSCArray.h,
	* Source/GSCArray.c: Add function to sort and search C arrays.

2013-07-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Check for math library.
	* Source/CFAttributedString.c,
	* Source/CFData.c,
	* Source/CFError.c,
	* Source/CFDate.c,
	* Source/CFNumber.c,
	* Source/CFRunLoop.c,
	* Source/CFRuntime.c,
	* Source/CFURL.c: Use CF_OBJC_FUNCDISPATCHV.
	* Source/CFStringEncoding.c: Fix character Unicode conversion.
	* Source/GSHashTable.h: Use GS_PRIVATE for hidden functions.
	* Source/GSPrivate.h: Add GS_PRIVATE for hidden visibility functions.
	Remove CF_OBJC_FUNCDISPATCH[012345] in favor of CF_OBJC_FUNCDISPATCHV.

2013-07-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Fix ASCII conversion.

2013-07-03 Ivan Vucica <ivan@vucica.net>
