@@ -3,9 +3,9 @@
 
 int main (void)
 {
+  UniChar uStr[] = { 's', 't', 'r', 0 };
   CFStringRef str1 = CFSTR ("str");
-  CFStringRef str2 = CFStringCreateWithCharacters (NULL,
-    (UniChar*) "s\0t\0r\0", 3); // "str" in UTF-16
+  CFStringRef str2 = CFStringCreateWithCharacters (NULL, uStr, 3);
 
   PASS_CF(CFHash (str1) == CFHash (str2),
     "Identical ASCII and UTF-16 string hashes match");
